--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@expo/samples": "2.1.1",
     "@expo/vector-icons": "^6.3.1",
     "expo": "^25.0.0",
+    "firebase": "^4.12.1",
     "native-base": "^2.3.10",
     "react": "16.2.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-25.0.0.tar.gz",
