star rating implemented in Feedback

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "native-base": "^2.4.5",
     "react": "16.2.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-25.0.0.tar.gz",
+    "react-native-star-rating": "^1.0.9",
     "react-navigation": "^1.0.0-beta.27"
   },
   "devDependencies": {
